@@ -17,6 +17,7 @@ Features added
 --------------
 
 * #6707: C++, support bit-fields.
+* #267: html: Eliminate prompt characters of doctest block from copyable text
 
 Bugs fixed
 ----------
